--- a/transfer-data-to-terminusdb/Brewery Tutorial.ipynb
+++ b/transfer-data-to-terminusdb/Brewery Tutorial.ipynb
@@ -6,7 +6,13 @@
    "metadata": {},
    "source": [
     "# Brewery Tutorial\n",
-    "Open Brewery\n",
+    "__[Open Brewery](https://www.openbrewerydb.org)__ DB is a free dataset and API with public information on breweries, cideries, brewpubs, and bottleshops. The goal of Open Brewery DB is to maintain an open-source, community-driven dataset and provide a public API. Datasets provided by the project are available in the following formats:\n",
+    "- __[CSV](https://github.com/openbrewerydb/openbrewerydb/blob/master/breweries.csv)__\n",
+    "- __[JSON](https://github.com/openbrewerydb/openbrewerydb/blob/master/breweries.json)__\n",
+    "- __[PostgreSQL SQL](https://github.com/openbrewerydb/openbrewerydb/blob/master/breweries.sql)__\n",
+    "\n",
+    "For this tutorial, CSV will be used.\n",
+    "\n",
     "## Import libraries\n",
     "For transfering data from a CSV file to a TerminusDB database, the Python client of TerminusDB and pandas are required. To import these libraries in the script, add the following lines:"
    ]
