--- a/transfer-data-to-terminusdb/Brewery Tutorial.ipynb
+++ b/transfer-data-to-terminusdb/Brewery Tutorial.ipynb
@@ -13,8 +13,12 @@
     "\n",
     "For this tutorial, CSV will be used.\n",
     "\n",
+    "TerminusDB Server must be installed on your system before running the Python script. Follow the instructions on __[terminusdb-bootstrap](https://github.com/terminusdb/terminusdb-bootstrap)__. terminusdb-server will be running as a Docker container on http://127.0.0.1:6363.\n",
+    "\n",
+    "Python client of TerminusDB is also required. It can be installed from source or through `pip`, you can follow the instructions in the __[repository](https://github.com/terminusdb/terminusdb-client-python)__. When running `pip install terminusdb-client[dataframe]` you will get pandas that is required for reading and import data from CSV files. If installed from source, run `pip install pandas`. tdqm is used for adding a progress bar, run `pip install tqdm` to install it.\n",
+    "\n",
     "## Import libraries\n",
-    "For transfering data from a CSV file to a TerminusDB database, the Python client of TerminusDB and pandas are required. To import these libraries in the script, add the following lines:"
+    "For transfering data from a CSV file to a TerminusDB database, the Python client of TerminusDB and pandas are required. A progress bar is added to the script using tqdm. To import these libraries, add the following lines:"
    ]
   },
   {
@@ -33,7 +37,8 @@
     "    HashKey,\n",
     ")\n",
     "\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -63,7 +68,7 @@
     "    db_id = \"open_brewery\"\n",
     "    url = \"https://raw.githubusercontent.com/openbrewerydb/openbrewerydb/master/breweries.csv\"\n",
     "    client = WOQLClient(\"http://127.0.0.1:6363\")\n",
-    "    client.connect(key=\"root\", account=\"admin\", user=\"admin\")\n",
+    "    client.connect()\n",
     "    try:\n",
     "        client.create_database(db_id, accountid=\"admin\", label = \"Open Brewery Graph\", description = \"Create a graph with brewery data\")\n",
     "    except Exception:\n",
@@ -73,7 +78,7 @@
     "                           commit_msg=\"I am checking in the schema\")\n",
     "    insert_data(client, url)\n",
     "    results = client.get_all_documents(graph_type=\"instance\", count=2)\n",
-    "    print(list(results))"
+    "    print(\"\\nRESULTS\\n\", list(results))"
    ]
   },
   {
@@ -107,13 +112,13 @@
     "Analyzing the dataset:\n",
     "\n",
     "- A brewery has *name*, *type*, *address*, *phone* and *website url*\n",
-    "- A brewery can be any of ten different types\n",
+    "- A brewery can be any of eleven different types (micro, nano, regional, brewpub, large, planning, bar, contract, proprietor, closed)\n",
     "- An address is a group of values that include *street*, *city*, *postal code* and *coordinates*\n",
     "- A city is located in a state\n",
     "- A state is part of a country\n",
     "- Coordinates are a pair of values, longitude and latitude\n",
     "\n",
-    "Based on what's described above, the following documents are created, each class represents a document in the schema:\n",
+    "Based on what's described above, the following documents are created, each class represents a document in the schema except Brewery Type that is an enum:\n",
     "- Brewery\n",
     "- Brewrey_Type\n",
     "- Address\n",
@@ -139,10 +144,19 @@
     "    longitude: float\n",
     "    latitude: float\n",
     "\n",
-    "class Brewery_Type(DocumentTemplate):\n",
+    "class Brewery_Type(EnumTemplate):\n",
     "    _schema = my_schema\n",
-    "    _key = ValueHashKey()\n",
-    "    name: str\n",
+    "    micro = ()\n",
+    "    nano = ()\n",
+    "    regional = ()\n",
+    "    brewpub = ()\n",
+    "    large = ()\n",
+    "    planning = ()\n",
+    "    bar = ()\n",
+    "    contract = ()\n",
+    "    proprietor = ()\n",
+    "    closed = ()\n",
+    "    taproom = ()\n",
     "\n",
     "class Country(DocumentTemplate):\n",
     "    _schema = my_schema\n",
@@ -165,7 +179,6 @@
     "    _schema = my_schema\n",
     "    \"\"\"This is address\"\"\"\n",
     "\n",
-    "    _key = HashKey([\"street\", \"postal_code\"])\n",
     "    _subdocument = []\n",
     "\n",
     "    street: str\n",
@@ -188,9 +201,13 @@
    "metadata": {},
    "source": [
     "## Transfer data\n",
-    "pandas provides built-in functions that make it simple to read and extract data from a CSV file. `read_csv` receives the path of the file as parameter, it can be a URL or a local file. Columns can be specified if not all are required, with `usecols`.\n",
+    "pandas provides built-in functions that make it simple to read and extract data from a CSV file. `read_csv` receives the path of the file as parameter, it can be a URL or a local file. Columns can be specified if not all are required, with `usecols`, `loc` method or `iloc` method.\n",
     "\n",
-    "As some cells in the CSV don't have a value, when importing data it would be required to replace NULL values with '' if an integer or float is expected instead. `fillna` function must be called to avoid 'Not a number' errors."
+    "As some cells in the CSV don't have a value, when importing data it would be required to replace `NULL` values with '' if an integer or float is expected instead. `fillna` must be called to avoid `Not a number` errors.\n",
+    "\n",
+    "Before transfering data to TerminusDB, headers and stats of the dataset are printed, all columns in the dataset are included. Output of `df.column.values` and `df.describe(include='all')` is printed to obtain that information. \n",
+    "\n",
+    "Then, only required columns are selected using `loc` method and NULL values are replaced by calling `fillna`."
    ]
   },
   {
@@ -202,8 +219,11 @@
    "source": [
     "def insert_data(client, url):\n",
     "    all_breweries = []\n",
-    "    df = pd.read_csv(url, usecols = ['name', 'brewery_type', 'street', 'city', 'state', 'postal_code', 'website_url','phone', 'country', 'longitude', 'latitude'])\n",
-    "    df = df.fillna('')"
+    "    df = pd.read_csv(url)\n",
+    "    print(\"HEADERS\\n\", list(df.columns.values))\n",
+    "    print(\"\\nSTATS\\n\", df.describe(include='all'), \"\\n\\nPROGRESS\")\n",
+    "    selection = df.loc[:, ['name', 'brewery_type', 'street', 'city', 'state', 'postal_code', 'website_url','phone', 'country', 'longitude', 'latitude']]\n",
+    "    selection = selection.fillna('')"
    ]
   },
   {
@@ -211,7 +231,7 @@
    "id": "6f63b70e",
    "metadata": {},
    "source": [
-    "Using a for loop, iterate through the values in the CSV, create objects for each document in the schema, assign values to the corresponding variables, and append these values to the `all_breweries` list."
+    "For importing data, a for loop is used to iterate through the values in the CSV, create objects for each document in the schema, assign values to the corresponding variables, and append these values to the `all_breweries` list. A progress bar is added with tqdm."
    ]
   },
   {
@@ -221,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    for index, row in df.iterrows():\n",
+    "    for index, row in tqdm(selection.iterrows(), total=df.shape[0], desc='Reading data'):\n",
     "        country = Country()\n",
     "        country.name = row['country']\n",
     "        state = State()\n",
@@ -235,10 +255,8 @@
     "        address.city = city\n",
     "        address.postal_code = row['postal_code']\n",
     "        address.coordinates = [str(row['longitude']), str(row['latitude'])]\n",
-    "        brewery_type = Brewery_Type()\n",
-    "        brewery_type.name = row['brewery_type']\n",
     "        brewery = Brewery()\n",
-    "        brewery.type_of = brewery_type\n",
+    "        brewery.type_of = Brewery_Type[row['brewery_type']]\n",
     "        brewery.address_of = address\n",
     "        brewery.phone = row['phone']\n",
     "        brewery.website_url = row['website_url']\n",
@@ -250,7 +268,7 @@
    "id": "889c8cb1",
    "metadata": {},
    "source": [
-    "Insert the `all_breweries` list into TerminusDB, with ``insert_document`."
+    "Insert the `all_breweries` list into TerminusDB, with ``insert_document`. A progress bar is added with tdqm."
    ]
   },
   {
@@ -260,8 +278,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    client.insert_document(all_breweries,\n",
-    "                           commit_msg=\"Adding all breweries\")"
+    "    with tqdm(total=1, desc='Transfering data') as pbar:\n",
+    "        client.insert_document(all_breweries,\n",
+    "                               commit_msg=\"Adding all breweries\")\n",
+    "        pbar.update(1)"
    ]
   }
  ],
