--- a/brewery/Brewery Tutorial.ipynb
+++ b/brewery/Brewery Tutorial.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "TerminusDB Server must be installed on your system before running the Python script. Follow the instructions on __[terminusdb-bootstrap](https://github.com/terminusdb/terminusdb-bootstrap)__. terminusdb-server will be running as a Docker container on http://127.0.0.1:6363.\n",
     "\n",
-    "Python client of TerminusDB is also required. It can be installed from source or through `pip`, you can follow the instructions in the __[repository](https://github.com/terminusdb/terminusdb-client-python)__. When running `pip install terminusdb-client[dataframe]` you will get pandas that is required for reading and import data from CSV files. If installed from source, run `pip install pandas`. tdqm is used for adding a progress bar, run `pip install tqdm` to install it.\n",
+    "Python client of TerminusDB is also required. It can be installed from source or through `pip`, you can follow the instructions in the __[repository](https://github.com/terminusdb/terminusdb-client-python)__. When running `pip install terminusdb-client[dataframe]` you will get pandas that is required for reading and importing data from CSV files. If installed from source, run `pip install pandas`. tdqm is used for adding a progress bar, run `pip install tqdm` to install it.\n",
     "\n",
     "## Import libraries\n",
     "For transfering data from a CSV file to a TerminusDB database, the Python client of TerminusDB and pandas are required. A progress bar is added to the script using tqdm. To import these libraries, add the following lines:"
@@ -28,13 +28,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List\n",
+    "from typing import List, Optional\n",
     "from terminusdb_client import WOQLQuery, WOQLClient\n",
     "from terminusdb_client.woqlschema.woql_schema import (\n",
     "    DocumentTemplate,\n",
+    "    EnumTemplate,\n",
     "    WOQLSchema,\n",
-    "    ValueHashKey,\n",
-    "    HashKey,\n",
     ")\n",
     "\n",
     "import pandas as pd\n",
@@ -65,19 +64,19 @@
    "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
-    "    db_id = \"open_brewery\"\n",
+    "    db_id = \"Brewery\"\n",
     "    url = \"https://raw.githubusercontent.com/openbrewerydb/openbrewerydb/master/breweries.csv\"\n",
     "    client = WOQLClient(\"http://127.0.0.1:6363\")\n",
     "    client.connect()\n",
     "    try:\n",
-    "        client.create_database(db_id, accountid=\"admin\", label = \"Open Brewery Graph\", description = \"Create a graph with brewery data\")\n",
+    "        client.create_database(db_id, team=\"admin\", label = \"Open Brewery Graph\", description = \"Create a graph with brewery data\")\n",
     "    except Exception:\n",
     "        client.set_db(db_id)\n",
     "    client.insert_document(my_schema.to_dict(),\n",
     "                           graph_type=\"schema\",\n",
     "                           commit_msg=\"I am checking in the schema\")\n",
     "    insert_data(client, url)\n",
-    "    results = client.get_all_documents(graph_type=\"instance\", count=2)\n",
+    "    results = client.get_all_documents(graph_type=\"instance\", count=10)\n",
     "    print(\"\\nRESULTS\\n\", list(results))"
    ]
   },
@@ -112,10 +111,8 @@
     "Analyzing the dataset:\n",
     "\n",
     "- A brewery has *name*, *type*, *address*, *phone* and *website url*\n",
-    "- A brewery can be any of eleven different types (micro, nano, regional, brewpub, large, planning, bar, contract, proprietor, closed)\n",
-    "- An address is a group of values that include *street*, *city*, *postal code* and *coordinates*\n",
-    "- A city is located in a state\n",
-    "- A state is part of a country\n",
+    "- A brewery can be any of eleven different types (micro, nano, regional, brewpub, large, planning, bar, contract, proprietor, closed, taproom)\n",
+    "- An address is a group of values that include *street*, *city*, *state*, *country*, *postal code* and *coordinates*\n",
     "- Coordinates are a pair of values, longitude and latitude\n",
     "\n",
     "Based on what's described above, the following documents are created, each class represents a document in the schema except Brewery Type that is an enum:\n",
@@ -127,7 +124,7 @@
     "- Country\n",
     "- Coordinates\n",
     "\n",
-    "IDs are created using `ValueHashKey` or `HashKey`. `my_schema` is a `WOQLSchema` object that contains the schema itself."
+    "`my_schema` is a `WOQLSchema` object that contains the schema itself."
    ]
   },
   {
@@ -139,10 +136,25 @@
    "source": [
     "my_schema = WOQLSchema()\n",
     "\n",
-    "class Coordinates(DocumentTemplate):\n",
+    "class Address(DocumentTemplate):\n",
+    "    \"\"\"This is address\"\"\"\n",
+    "\n",
+    "    _subdocument = []\n",
     "    _schema = my_schema\n",
-    "    longitude: float\n",
-    "    latitude: float\n",
+    "    city: \"City\"\n",
+    "    state: Optional[\"State\"]\n",
+    "    country: \"Country\"\n",
+    "    coordinates: List[\"Coordinates\"]\n",
+    "    postal_code: str\n",
+    "    street: str\n",
+    "\n",
+    "class Brewery(DocumentTemplate):\n",
+    "    _schema = my_schema\n",
+    "    address_of: \"Address\"\n",
+    "    name: str\n",
+    "    phone: str\n",
+    "    type_of: \"Brewery_Type\"\n",
+    "    website_url: str\n",
     "\n",
     "class Brewery_Type(EnumTemplate):\n",
     "    _schema = my_schema\n",
@@ -158,41 +170,22 @@
     "    closed = ()\n",
     "    taproom = ()\n",
     "\n",
+    "class City(DocumentTemplate):\n",
+    "    _schema = my_schema\n",
+    "    name: str\n",
+    "\n",
+    "class Coordinates(DocumentTemplate):\n",
+    "    _schema = my_schema\n",
+    "    latitude: float\n",
+    "    longitude: float\n",
+    "\n",
     "class Country(DocumentTemplate):\n",
     "    _schema = my_schema\n",
-    "    _key = ValueHashKey()\n",
     "    name: str\n",
     "\n",
     "class State(DocumentTemplate):\n",
     "    _schema = my_schema\n",
-    "    _key = ValueHashKey()\n",
-    "    name: str\n",
-    "    country: Country\n",
-    "\n",
-    "class City(DocumentTemplate):\n",
-    "    _schema = my_schema\n",
-    "    _key = ValueHashKey()\n",
-    "    name: str\n",
-    "    state: State\n",
-    "\n",
-    "class Address(DocumentTemplate):\n",
-    "    _schema = my_schema\n",
-    "    \"\"\"This is address\"\"\"\n",
-    "\n",
-    "    _subdocument = []\n",
-    "\n",
-    "    street: str\n",
-    "    city = City\n",
-    "    postal_code: str\n",
-    "    coordinates: List[Coordinates]\n",
-    "\n",
-    "class Brewery(DocumentTemplate):\n",
-    "    _schema = my_schema\n",
-    "    name: str\n",
-    "    type_of: Brewery_Type \n",
-    "    address_of: Address\n",
-    "    phone: str\n",
-    "    website_url: str"
+    "    name: str"
    ]
   },
   {
@@ -218,11 +211,11 @@
    "outputs": [],
    "source": [
     "def insert_data(client, url):\n",
-    "    all_breweries = []\n",
-    "    df = pd.read_csv(url)\n",
+    "    breweries = []\n",
+    "    df = pd.read_csv(url, nrows=4000)\n",
     "    print(\"HEADERS\\n\", list(df.columns.values))\n",
     "    print(\"\\nSTATS\\n\", df.describe(include='all'), \"\\n\\nPROGRESS\")\n",
-    "    selection = df.loc[:, ['name', 'brewery_type', 'street', 'city', 'state', 'postal_code', 'website_url','phone', 'country', 'longitude', 'latitude']]\n",
+    "    selection = df.loc[:, ['name', 'brewery_type', 'street', 'city', 'state', 'postal_code', 'website_url', 'phone', 'country', 'longitude', 'latitude']]\n",
     "    selection = selection.fillna('')"
    ]
   },
@@ -231,7 +224,7 @@
    "id": "6f63b70e",
    "metadata": {},
    "source": [
-    "For importing data, a for loop is used to iterate through the values in the CSV, create objects for each document in the schema, assign values to the corresponding variables, and append these values to the `all_breweries` list. A progress bar is added with tqdm."
+    "For importing data, a for loop is used to iterate through the values in the CSV, create objects for each document in the schema, assign values to the corresponding variables, and append these values to the `breweries` list. A progress bar is added with tqdm."
    ]
   },
   {
@@ -242,25 +235,46 @@
    "outputs": [],
    "source": [
     "    for index, row in tqdm(selection.iterrows(), total=df.shape[0], desc='Reading data'):\n",
-    "        country = Country()\n",
-    "        country.name = row['country']\n",
-    "        state = State()\n",
-    "        state.name = row['state']\n",
-    "        state.country = country\n",
+    "\n",
+    "        # City\n",
     "        city = City()\n",
     "        city.name = row['city']\n",
-    "        city.state = state\n",
+    "        breweries.append(city)\n",
+    "\n",
+    "        # State\n",
+    "        state = State()\n",
+    "        state.name = row['state']\n",
+    "        breweries.append(state)\n",
+    "\n",
+    "        # Country\n",
+    "        country = Country()\n",
+    "        country.name = row['country']\n",
+    "        breweries.append(country)\n",
+    "        \n",
+    "        # Coordinates\n",
+    "        coordinates = Coordinates()\n",
+    "        coordinates.latitude = 0 if row['latitude']=='' else row['latitude']\n",
+    "        coordinates.longitude = 0 if row['longitude']=='' else row['longitude']\n",
+    "        breweries.append(coordinates)\n",
+    "\n",
+    "        # Address\n",
     "        address = Address()\n",
     "        address.street = row['street']\n",
     "        address.city = city\n",
+    "        address.state = state\n",
+    "        address.country = country\n",
     "        address.postal_code = row['postal_code']\n",
-    "        address.coordinates = [str(row['longitude']), str(row['latitude'])]\n",
+    "        address.coordinates = [coordinates]\n",
+    "        breweries.append(address)\n",
+    "\n",
+    "        # Brewery\n",
     "        brewery = Brewery()\n",
+    "        brewery.name = row['name']\n",
     "        brewery.type_of = Brewery_Type[row['brewery_type']]\n",
     "        brewery.address_of = address\n",
-    "        brewery.phone = row['phone']\n",
+    "        brewery.phone = str(row['phone'])\n",
     "        brewery.website_url = row['website_url']\n",
-    "        all_breweries.append(brewery)"
+    "        breweries.append(brewery)"
    ]
   },
   {
@@ -268,7 +282,7 @@
    "id": "889c8cb1",
    "metadata": {},
    "source": [
-    "Insert the `all_breweries` list into TerminusDB, with ``insert_document`. A progress bar is added with tdqm."
+    "Insert the `breweries` list into TerminusDB, with ``insert_document`. A progress bar is added with tdqm."
    ]
   },
   {
@@ -279,7 +293,7 @@
    "outputs": [],
    "source": [
     "    with tqdm(total=1, desc='Transfering data') as pbar:\n",
-    "        client.insert_document(all_breweries,\n",
+    "        client.insert_document(breweries,\n",
     "                               commit_msg=\"Adding all breweries\")\n",
     "        pbar.update(1)"
    ]
@@ -287,7 +301,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -301,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
