--- a/brewery/scaffolding/Brewery Tutorial.ipynb
+++ b/brewery/scaffolding/Brewery Tutorial.ipynb
@@ -44,8 +44,7 @@
    "id": "b86b7c7d",
    "metadata": {},
    "source": [
-    "This command will create a schema template (̣̣`schema.py`) and configuration file (`settings.py`) into current working directory. `settings.py` must be customized with the name of the database for the project. `schema.py`  \n",
-    "must be edited and schema definition replaced according to the data imported from the CSV file.\n",
+    "This command will create a schema template (̣̣`schema.py`) and configuration file (`config.json`) into current working directory. `schema.py` must be edited and schema definition replaced according to the data imported from the CSV file.\n",
     "\n",
     "- Update schema"
    ]
@@ -132,9 +131,7 @@
     "\n",
     "- A brewery has *name*, *type*, *address*, *phone* and *website url*\n",
     "- A brewery can be any of eleven different types (micro, nano, regional, brewpub, large, planning, bar, contract, proprietor, closed)\n",
-    "- An address is a group of values that include *street*, *city*, *postal code* and *coordinates*\n",
-    "- A city is located in a state\n",
-    "- A state is part of a country\n",
+    "- An address is a group of values that include *street*, *city*, *state*, *country*, *postal code* and *coordinates*\n",
     "- Coordinates are a pair of values, longitude and latitude\n",
     "\n",
     "Based on what's described above, the following documents are created, each class represents a document in the schema except Brewery Type that is an enum:\n",
@@ -145,8 +142,6 @@
     "- State\n",
     "- Country\n",
     "- Coordinates\n",
-    "\n",
-    "IDs are created using `ValueHashKey` or `RandomKey`.\n",
     "\n",
     "`schema.py` must be customized according to the documents required and values imported from the CSV file.\n",
     "\n",
@@ -160,21 +155,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List\n",
+    "####\n",
+    "# This is the script for storing the schema of your TerminusDB\n",
+    "# database for your project.\n",
+    "# Use 'terminusdb commit' to commit changes to the database and\n",
+    "# use 'terminusdb sync' to change this file according to\n",
+    "# the exsisting database schema\n",
+    "####\n",
     "\n",
-    "from terminusdb_client.woqlschema import (\n",
-    "    DocumentTemplate,\n",
-    "    EnumTemplate,\n",
-    "    RandomKey,\n",
-    "    ValueHashKey,\n",
-    ")\n",
+    "from typing import List, Optional\n",
+    "\n",
+    "from terminusdb_client.woqlschema import DocumentTemplate, EnumTemplate, RandomKey\n",
     "\n",
     "\n",
     "class Address(DocumentTemplate):\n",
+    "    \"\"\"This is address\"\"\"\n",
+    "\n",
     "    _subdocument = []\n",
     "    city: \"City\"\n",
     "    coordinates: List[\"Coordinates\"]\n",
+    "    country: \"Country\"\n",
     "    postal_code: str\n",
+    "    state: Optional[\"State\"]\n",
     "    street: str\n",
     "\n",
     "\n",
@@ -202,9 +204,8 @@
     "\n",
     "\n",
     "class City(DocumentTemplate):\n",
-    "    _key = ValueHashKey()\n",
+    "    _key = RandomKey()\n",
     "    name: str\n",
-    "    state: \"State\"\n",
     "\n",
     "\n",
     "class Coordinates(DocumentTemplate):\n",
@@ -214,13 +215,12 @@
     "\n",
     "\n",
     "class Country(DocumentTemplate):\n",
-    "    _key = ValueHashKey()\n",
+    "    _key = RandomKey()\n",
     "    name: str\n",
     "\n",
     "\n",
     "class State(DocumentTemplate):\n",
-    "    _key = ValueHashKey()\n",
-    "    country: \"Country\"\n",
+    "    _key = RandomKey()\n",
     "    name: str"
    ]
   },
@@ -240,10 +240,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List\n",
+    "from typing import List, Optional\n",
     "from terminusdb_client import WOQLQuery, WOQLClient\n",
     "import pandas as pd\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import schema"
    ]
   },
   {
@@ -266,13 +267,13 @@
    "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
-    "    db_id = \"open_brewery\"\n",
+    "    db_id = \"Brewery\"\n",
     "    url = \"https://raw.githubusercontent.com/openbrewerydb/openbrewerydb/master/breweries.csv\"\n",
     "    client = WOQLClient(\"http://127.0.0.1:6363\")\n",
     "    client.connect()\n",
     "    client.set_db(db_id)\n",
     "    insert_data(client, url)\n",
-    "    results = client.get_all_documents(graph_type=\"instance\", count=2)\n",
+    "    results = client.get_all_documents(graph_type=\"instance\", count=10)\n",
     "    print(\"\\nRESULTS\\n\", list(results))"
    ]
   },
@@ -299,11 +300,11 @@
    "outputs": [],
    "source": [
     "def insert_data(client, url):\n",
-    "    all_breweries = []\n",
-    "    df = pd.read_csv(url)\n",
+    "    breweries = []\n",
+    "    df = pd.read_csv(url, nrows=3000)\n",
     "    print(\"HEADERS\\n\", list(df.columns.values))\n",
     "    print(\"\\nSTATS\\n\", df.describe(include='all'), \"\\n\\nPROGRESS\")\n",
-    "    selection = df.loc[:, ['name', 'brewery_type', 'street', 'city', 'state', 'postal_code', 'website_url','phone', 'country', 'longitude', 'latitude']]\n",
+    "    selection = df.loc[:, ['name', 'brewery_type', 'street', 'city', 'state', 'postal_code', 'website_url', 'phone', 'country', 'longitude', 'latitude']]\n",
     "    selection = selection.fillna('')"
    ]
   },
@@ -312,7 +313,7 @@
    "id": "6f63b70e",
    "metadata": {},
    "source": [
-    "For importing data, a for loop is used to iterate through the values in the CSV, create objects for each document in the schema, assign values to the corresponding variables, and append these values to the `all_breweries` list. A progress bar is added with tqdm."
+    "For importing data, a for loop is used to iterate through the values in the CSV, create objects for each document in the schema, assign values to the corresponding variables, and append these values to the `breweries` list. A progress bar is added with tqdm."
    ]
   },
   {
@@ -323,25 +324,46 @@
    "outputs": [],
    "source": [
     "    for index, row in tqdm(selection.iterrows(), total=df.shape[0], desc='Reading data'):\n",
-    "        country = schema.Country()\n",
-    "        country.name = row['country']\n",
-    "        state = schema.State()\n",
-    "        state.name = row['state']\n",
-    "        state.country = country\n",
+    "\n",
+    "        # City\n",
     "        city = schema.City()\n",
     "        city.name = row['city']\n",
-    "        city.state = state\n",
+    "        breweries.append(city)\n",
+    "\n",
+    "        # State\n",
+    "        state = schema.State()\n",
+    "        state.name = row['state']\n",
+    "        breweries.append(state)\n",
+    "\n",
+    "        # Country\n",
+    "        country = schema.Country()\n",
+    "        country.name = row['country']\n",
+    "        breweries.append(country)\n",
+    "        \n",
+    "        # Coordinates\n",
+    "        coordinates = schema.Coordinates()\n",
+    "        coordinates.latitude = 0 if row['latitude']=='' else row['latitude']\n",
+    "        coordinates.longitude = 0 if row['longitude']=='' else row['longitude']\n",
+    "        breweries.append(coordinates)\n",
+    "\n",
+    "        # Address\n",
     "        address = schema.Address()\n",
     "        address.street = row['street']\n",
     "        address.city = city\n",
+    "        address.state = state\n",
+    "        address.country = country\n",
     "        address.postal_code = row['postal_code']\n",
-    "        address.coordinates = [str(row['longitude']), str(row['latitude'])]\n",
+    "        address.coordinates = [coordinates]\n",
+    "        breweries.append(address)\n",
+    "\n",
+    "        # Brewery\n",
     "        brewery = schema.Brewery()\n",
+    "        brewery.name = row['name']\n",
     "        brewery.type_of = schema.Brewery_Type[row['brewery_type']]\n",
     "        brewery.address_of = address\n",
-    "        brewery.phone = row['phone']\n",
+    "        brewery.phone = str(row['phone'])\n",
     "        brewery.website_url = row['website_url']\n",
-    "        all_breweries.append(brewery)"
+    "        breweries.append(brewery)"
    ]
   },
   {
@@ -349,7 +371,7 @@
    "id": "889c8cb1",
    "metadata": {},
    "source": [
-    "Insert the `all_breweries` list into TerminusDB, with ``insert_document`. A progress bar is added with tdqm."
+    "Insert the `breweries` list into TerminusDB, with ``insert_document`. A progress bar is added with tdqm."
    ]
   },
   {
@@ -360,7 +382,7 @@
    "outputs": [],
    "source": [
     "    with tqdm(total=1, desc='Transfering data') as pbar:\n",
-    "        client.insert_document(all_breweries,\n",
+    "        client.insert_document(breweries,\n",
     "                               commit_msg=\"Adding all breweries\")\n",
     "        pbar.update(1)"
    ]
@@ -368,7 +390,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -382,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
