--- a/brewery/Brewery Tutorial.ipynb
+++ b/brewery/Brewery Tutorial.ipynb
@@ -53,6 +53,7 @@
     "- Create a database named *open_brewery*\n",
     "- Insert schema into database\n",
     "- Import data from CSV file\n",
+    "- Print headers and stats\n",
     "- Print data from TerminusDB"
    ]
   },
@@ -75,6 +76,7 @@
     "    client.insert_document(my_schema.to_dict(),\n",
     "                           graph_type=\"schema\",\n",
     "                           commit_msg=\"I am checking in the schema\")\n",
+    "    csv_info(url)\n",
     "    insert_data(client, url)\n",
     "    results = client.get_all_documents(graph_type=\"instance\", count=10)\n",
     "    print(\"\\nRESULTS\\n\", list(results))"
@@ -190,17 +192,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7145ffe1",
+   "metadata": {},
+   "source": [
+    "## Print CSV info\n",
+    "Before transfering data to TerminusDB, headers and stats of the dataset are printed by calling `csv_info` function. Output of `df.info()` is printed to obtain that information."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4879d57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def csv_info(url):\n",
+    "    df = pd.read_csv(url)\n",
+    "    print(\"\\nSTATS:\\n\")\n",
+    "    df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "92700b0e",
    "metadata": {},
    "source": [
     "## Transfer data\n",
-    "pandas provides built-in functions that make it simple to read and extract data from a CSV file. `read_csv` receives the path of the file as parameter, it can be a URL or a local file. Columns can be specified if not all are required, with `usecols`, `loc` method or `iloc` method.\n",
+    "pandas provides built-in functions that make it simple to read and extract data from a CSV file. `read_csv` receives the path of the file as parameter, it can be a URL or a local file. Columns can be specified if not all are required, with `usecols` paramter in `read_csv` method.\n",
     "\n",
-    "As some cells in the CSV don't have a value, when importing data it would be required to replace `NULL` values with '' if an integer or float is expected instead. `fillna` must be called to avoid `Not a number` errors.\n",
+    "To avoid `Connection timed out`, data from CSV is read in chunks with `chunksize` parameter in `read_csv` method.\n",
     "\n",
-    "Before transfering data to TerminusDB, headers and stats of the dataset are printed, all columns in the dataset are included. Output of `df.column.values` and `df.describe(include='all')` is printed to obtain that information. \n",
+    "As the dataset has about eight thousand registries, data is divided into 8 chunks as `chunksize` is equal to `1000`.\n",
     "\n",
-    "Then, only required columns are selected using `loc` method and NULL values are replaced by calling `fillna`."
+    "Every chunk is saved as temporary CSV files and passed to `read_data` function that returns a list with data that is inserted into TerminusDB through `ìnsert_document` method."
    ]
   },
   {
@@ -211,12 +235,13 @@
    "outputs": [],
    "source": [
     "def insert_data(client, url):\n",
-    "    breweries = []\n",
-    "    df = pd.read_csv(url, nrows=4000)\n",
-    "    print(\"HEADERS\\n\", list(df.columns.values))\n",
-    "    print(\"\\nSTATS\\n\", df.describe(include='all'), \"\\n\\nPROGRESS\")\n",
-    "    selection = df.loc[:, ['name', 'brewery_type', 'street', 'city', 'state', 'postal_code', 'website_url', 'phone', 'country', 'longitude', 'latitude']]\n",
-    "    selection = selection.fillna('')"
+    "    df = pd.read_csv(url, chunksize=1000, usecols = ['name', 'brewery_type', 'street', 'city', 'state', 'postal_code', 'website_url', 'phone', 'country', 'longitude', 'latitude'])\n",
+    "    for chunk in tqdm(df, desc='Transfering data'):\n",
+    "        csv = tempfile.NamedTemporaryFile()\n",
+    "        chunk.to_csv(csv)\n",
+    "        breweries = read_data(csv.name)\n",
+    "        client.insert_document(breweries,\n",
+    "                               commit_msg=\"Adding all breweries\")"
    ]
   },
   {
@@ -224,7 +249,9 @@
    "id": "6f63b70e",
    "metadata": {},
    "source": [
-    "For importing data, a for loop is used to iterate through the values in the CSV, create objects for each document in the schema, assign values to the corresponding variables, and append these values to the `breweries` list. A progress bar is added with tqdm."
+    "As some cells in the CSV don't have a value, when importing data it would be required to replace `NULL` values with '' if an integer or float is expected instead. `fillna` must be called to avoid `Not a number` errors.\n",
+    "\n",
+    "For importing data, a for loop is used to iterate through the values in the CSV, create objects for each document in the schema, assign values to the corresponding variables, and append these values to the `breweries` list."
    ]
   },
   {
@@ -234,8 +261,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    for index, row in tqdm(selection.iterrows(), total=df.shape[0], desc='Reading data'):\n",
-    "\n",
+    "    breweries = []\n",
+    "    df = pd.read_csv(csv)\n",
+    "    selection = df.fillna('')\n",
+    "    for index, row in selection.iterrows():\n",
     "        # City\n",
     "        city = City()\n",
     "        city.name = row['city']\n",
@@ -274,34 +303,15 @@
     "        brewery.address_of = address\n",
     "        brewery.phone = str(row['phone'])\n",
     "        brewery.website_url = row['website_url']\n",
-    "        breweries.append(brewery)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "889c8cb1",
-   "metadata": {},
-   "source": [
-    "Insert the `breweries` list into TerminusDB, with ``insert_document`. A progress bar is added with tdqm."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df442d8d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    with tqdm(total=1, desc='Transfering data') as pbar:\n",
-    "        client.insert_document(breweries,\n",
-    "                               commit_msg=\"Adding all breweries\")\n",
-    "        pbar.update(1)"
+    "        breweries.append(brewery)\n",
+    "    \n",
+    "    return breweries"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -315,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
