--- a/brewery/scaffolding/Brewery Tutorial.ipynb
+++ b/brewery/scaffolding/Brewery Tutorial.ipynb
@@ -15,7 +15,9 @@
     "\n",
     "TerminusDB Server must be installed on your system before running the Python script. Follow the instructions on __[terminusdb-bootstrap](https://github.com/terminusdb/terminusdb-bootstrap)__. terminusdb-server will be running as a Docker container on http://127.0.0.1:6363.\n",
     "\n",
-    "Python client of TerminusDB is also required. It can be installed from source or through `pip`, you can follow the instructions in the __[repository](https://github.com/terminusdb/terminusdb-client-python)__. When running `pip install terminusdb-client[dataframe]` you will get pandas that is required for reading and import data from CSV files. If installed from source, run `pip install pandas`. tdqm is used for adding a progress bar, run `pip install tqdm` to install it."
+    "Python client of TerminusDB is also required. It can be installed from source or through `pip`, you can follow the instructions in the __[repository](https://github.com/terminusdb/terminusdb-client-python)__. When running `pip install terminusdb-client[dataframe]` you will get pandas that is required for reading and import data from CSV files. If installed from source, run `pip install pandas`. tdqm is used for adding a progress bar, run `pip install tqdm` to install it.\n",
+    "\n",
+    "Columns in the dataset that are not required must be deleted before importing data from CSV."
    ]
   },
   {
@@ -86,6 +88,42 @@
    "source": [
     "`schema.py` will be updated with database schema\n",
     "\n",
+    "- Import CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d752d8db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "terminusdb importcsv csv_file [options]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4e1cd4c",
+   "metadata": {},
+   "source": [
+    "Data will be read and imported into TerminusDB. For `NA` values in the Open Brewery dataset, use `--na` option when running `terminusdb importcsv` with `skip` parameter to remove records with `NA`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "162db6cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "termiusdb importcsv breweries.csv --na skip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d029d928",
+   "metadata": {},
+   "source": [
     "- Delete database"
    ]
   },
@@ -223,174 +261,11 @@
     "    _key = RandomKey()\n",
     "    name: str"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "913681dd",
-   "metadata": {},
-   "source": [
-    "## Import libraries\n",
-    "For transfering data from a CSV file to a TerminusDB database, the Python client of TerminusDB and pandas are required. A progress bar is added to the script using tqdm. To import these libraries, add the following lines:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ccfec1e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import List, Optional\n",
-    "from terminusdb_client import WOQLQuery, WOQLClient\n",
-    "import pandas as pd\n",
-    "from tqdm import tqdm\n",
-    "import schema"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "59e81415",
-   "metadata": {},
-   "source": [
-    "## Database management\n",
-    "Using the Python client:\n",
-    "- Establish a connection to TerminusDB\n",
-    "- Import data from CSV file\n",
-    "- Print data from TerminusDB"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "629e4d0f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if __name__ == \"__main__\":\n",
-    "    db_id = \"Brewery\"\n",
-    "    url = \"https://raw.githubusercontent.com/openbrewerydb/openbrewerydb/master/breweries.csv\"\n",
-    "    client = WOQLClient(\"http://127.0.0.1:6363\")\n",
-    "    client.connect()\n",
-    "    client.set_db(db_id)\n",
-    "    insert_data(client, url)\n",
-    "    results = client.get_all_documents(graph_type=\"instance\", count=10)\n",
-    "    print(\"\\nRESULTS\\n\", list(results))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "92700b0e",
-   "metadata": {},
-   "source": [
-    "## Transfer data\n",
-    "pandas provides built-in functions that make it simple to read and extract data from a CSV file. `read_csv` receives the path of the file as parameter, it can be a URL or a local file. Columns can be specified if not all are required, with `usecols`, `loc` method or `iloc` method.\n",
-    "\n",
-    "As some cells in the CSV don't have a value, when importing data it would be required to replace `NULL` values with '' if an integer or float is expected instead. `fillna` must be called to avoid `Not a number` errors.\n",
-    "\n",
-    "Before transfering data to TerminusDB, headers and stats of the dataset are printed, all columns in the dataset are included. Output of `df.column.values` and `df.describe(include='all')` is printed to obtain that information. \n",
-    "\n",
-    "Then, only required columns are selected using `loc` method and NULL values are replaced by calling `fillna`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c568230",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def insert_data(client, url):\n",
-    "    breweries = []\n",
-    "    df = pd.read_csv(url, nrows=3000)\n",
-    "    print(\"HEADERS\\n\", list(df.columns.values))\n",
-    "    print(\"\\nSTATS\\n\", df.describe(include='all'), \"\\n\\nPROGRESS\")\n",
-    "    selection = df.loc[:, ['name', 'brewery_type', 'street', 'city', 'state', 'postal_code', 'website_url', 'phone', 'country', 'longitude', 'latitude']]\n",
-    "    selection = selection.fillna('')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6f63b70e",
-   "metadata": {},
-   "source": [
-    "For importing data, a for loop is used to iterate through the values in the CSV, create objects for each document in the schema, assign values to the corresponding variables, and append these values to the `breweries` list. A progress bar is added with tqdm."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a09d1a3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    for index, row in tqdm(selection.iterrows(), total=df.shape[0], desc='Reading data'):\n",
-    "\n",
-    "        # City\n",
-    "        city = schema.City()\n",
-    "        city.name = row['city']\n",
-    "        breweries.append(city)\n",
-    "\n",
-    "        # State\n",
-    "        state = schema.State()\n",
-    "        state.name = row['state']\n",
-    "        breweries.append(state)\n",
-    "\n",
-    "        # Country\n",
-    "        country = schema.Country()\n",
-    "        country.name = row['country']\n",
-    "        breweries.append(country)\n",
-    "        \n",
-    "        # Coordinates\n",
-    "        coordinates = schema.Coordinates()\n",
-    "        coordinates.latitude = 0 if row['latitude']=='' else row['latitude']\n",
-    "        coordinates.longitude = 0 if row['longitude']=='' else row['longitude']\n",
-    "        breweries.append(coordinates)\n",
-    "\n",
-    "        # Address\n",
-    "        address = schema.Address()\n",
-    "        address.street = row['street']\n",
-    "        address.city = city\n",
-    "        address.state = state\n",
-    "        address.country = country\n",
-    "        address.postal_code = row['postal_code']\n",
-    "        address.coordinates = [coordinates]\n",
-    "        breweries.append(address)\n",
-    "\n",
-    "        # Brewery\n",
-    "        brewery = schema.Brewery()\n",
-    "        brewery.name = row['name']\n",
-    "        brewery.type_of = schema.Brewery_Type[row['brewery_type']]\n",
-    "        brewery.address_of = address\n",
-    "        brewery.phone = str(row['phone'])\n",
-    "        brewery.website_url = row['website_url']\n",
-    "        breweries.append(brewery)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "889c8cb1",
-   "metadata": {},
-   "source": [
-    "Insert the `breweries` list into TerminusDB, with ``insert_document`. A progress bar is added with tdqm."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df442d8d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    with tqdm(total=1, desc='Transfering data') as pbar:\n",
-    "        client.insert_document(breweries,\n",
-    "                               commit_msg=\"Adding all breweries\")\n",
-    "        pbar.update(1)"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -404,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
