--- a/netflix/Netflix Tutorial.ipynb
+++ b/netflix/Netflix Tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6718ab69",
+   "id": "fde2d258",
    "metadata": {},
    "source": [
     "[A Netflix dataset](https://www.kaggle.com/shivamb/netflix-shows), available as CSV file, will be imported into TerminusDB using the Python client. Instructions to install Python client can be found in the [repository](https://github.com/terminusdb/terminusdb-client-python).\n",
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a542596",
+   "id": "8f039d0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9a34f97",
+   "id": "0a52823a",
    "metadata": {},
    "source": [
     "## Schema definition\n",
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "064ca5ae",
+   "id": "25896279",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40ef07f7",
+   "id": "c620853e",
    "metadata": {},
    "source": [
     "## Reading and importing data\n",
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36465c58",
+   "id": "16efa889",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,17 +171,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42c57f97",
+   "id": "9575d733",
    "metadata": {},
    "source": [
     "## Database connection\n",
-    "You must established a connection to either a local instance of TerminusDB Server (running at http://127.0.0.1:6363) or a TerminusX account, then create a database named `Netflix`. The schema defined above is inserted into TerminusDB by calling the `insert_document` method defined in the Python client. Finally, `insert data` function is called and first 10 records of the `Netfix` database are printed."
+    "You must established a connection to either a local instance of TerminusDB Server (running at http://127.0.0.1:6363) or a TerminusX account, then create a database named `Netflix`. The schema defined above is inserted into TerminusDB by calling the `insert_document` method defined in the Python client. Finally, `insert data` function is called and first 10 records of the `Netfix` database are printed. The `team` variable refers to the team associated with your TerminusX account, the value must be replaced accordingly."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c219804",
+   "id": "db256b2f",
    "metadata": {},
    "outputs": [],
    "source": [
