--- a/netflix/Netflix Tutorial.ipynb
+++ b/netflix/Netflix Tutorial.ipynb
@@ -276,12 +276,13 @@
    "metadata": {},
    "source": [
     "## Branches\n",
+    "`main` is the default branch when you create a new TerminusDB database. You can manage branches in your database with the Python client and run any of the following tasks:\n",
     "- Create branch\n",
     "- Delete branch\n",
-    "- Get all branches\n",
-    "- Switch branches\n",
+    "- List branches\n",
     "\n",
-    "Check the [documentation](https://terminusdb.github.io/terminusdb-client-python/woqlClient.html) for more information."
+    "### Create branch\n",
+    "You can create a new branch by calling the `create_branch` method, passing the name of the new branch and the `empty` variable as parameters. When `empty` is set to `False`, a new branch will be created, containing the schema and data inserted into the database previously. If set to `True`, an empty branch will be created."
    ]
   },
   {
@@ -291,20 +292,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_branch(\"some_branch\", empty=False)\n",
-    "# Create an empty branch if true (no starting commit)\n",
+    "client.create_branch(\"some_branch\", empty=False)\n",
     "\n",
-    "client.delete(\"some_branch\")\n",
+    "client.create_branch(\"some_branch\", empty=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e95ba237",
+   "metadata": {},
+   "source": [
+    "### Delete branch\n",
+    "You can delete a branch by calling the `delete` and passing the name of the branch as parameter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f18c4e77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.delete_branch(\"some_branch\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c25d3420",
+   "metadata": {},
+   "source": [
+    "### List branches\n",
+    "If you wan to get a list of the branches, call the `get_all_branches` method. This method will return a list with details of the branches in your database."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9d0a782",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "branches = client.get_all_branches()\n",
     "\n",
-    "client.get_all_branches()\n",
+    "print(branches)\n",
     "\n",
-    "client.checkout(\"some_branch\")"
+    "# Output:\n",
+    "# [{'@id': 'Branch/main', '@type': 'Branch', 'head': 'ValidCommit/ofxzh4i6jb9arf0nx5nicffhgcqxjco', 'name': 'main'}]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f28ab0fc",
+   "metadata": {},
+   "source": [
+    "Check the [documentation](https://terminusdb.github.io/terminusdb-client-python/woqlClient.html) for more information."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -318,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
