added functions to generate and insert user data
Signed-off-by: NeelParihar <neelparihar599@gmail.com>

--- a/netflix/Netflix Tutorial.ipynb
+++ b/netflix/Netflix Tutorial.ipynb
@@ -13,7 +13,8 @@
     "- TerminusDB (Python client)\n",
     "- pandas\n",
     "- tqdm\n",
-    "- tempfile"
+    "- tempfile\n",
+    "- random"
    ]
   },
   {
@@ -23,17 +24,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List, Optional\n",
-    "from terminusdb_client import WOQLQuery, WOQLClient\n",
+    "from typing import  Set, Optional\n",
+    "from terminusdb_client import WOQLClient\n",
     "from terminusdb_client.woqlschema.woql_schema import (\n",
     "    DocumentTemplate,\n",
     "    EnumTemplate,\n",
     "    WOQLSchema,\n",
+    "    LexicalKey,\n",
     ")\n",
     "\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
-    "import tempfile"
+    "import tempfile\n",
+    "import random"
    ]
   },
   {
@@ -56,7 +59,7 @@
     "- description\n",
     "- date_added\n",
     "\n",
-    "From which there would be one main class, `Netflix`, and two Enums, `Content_Type` and `Rating`."
+    "From which there would be one main class, `Content`, `User` class, and two Enums, `Content_Type` and `Rating`."
    ]
   },
   {
@@ -66,15 +69,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_schema = WOQLSchema()\n",
     "\n",
-    "class Netflix(DocumentTemplate):\n",
-    "    _schema = my_schema\n",
+    "schema = WOQLSchema()\n",
+    "\n",
+    "class Content(DocumentTemplate):\n",
+    "    _schema = schema\n",
     "    title: str\n",
     "    type_of: \"Content_Type\"\n",
     "    director: Optional[str]\n",
     "    cast: Optional[str]\n",
-    "    country: Optional[str]\n",
+    "    country_of_origin: Optional[str]\n",
     "    release_year: int\n",
     "    rating: \"Rating\"\n",
     "    duration: str\n",
@@ -82,13 +86,20 @@
     "    description: str\n",
     "    date_added: Optional[str]\n",
     "\n",
+    "class User(DocumentTemplate):\n",
+    "    _schema = schema\n",
+    "    _key = LexicalKey(keys=\"id\")\n",
+    "    _base = \"User\"\n",
+    "    id : str\n",
+    "    watched_contents: Set[\"Content\"]\n",
+    "\n",
     "class Content_Type(EnumTemplate):\n",
-    "    _schema = my_schema\n",
+    "    _schema = schema\n",
     "    TV_Show = \"TV Show\"\n",
     "    Movie = \"Movie\"\n",
     "\n",
     "class Rating(EnumTemplate):\n",
-    "    _schema = my_schema\n",
+    "    _schema = schema\n",
     "    TV_MA = \"TV-MA\"\n",
     "    R = ()\n",
     "    PG_13 = \"PG-13\"\n",
@@ -104,7 +115,7 @@
     "    G = ()\n",
     "    NC_17 = \"NC-17\"\n",
     "    TV_Y7_FV = \"TV-Y7-FV\"\n",
-    "    UR = ()"
+    "    UR = ()\n"
    ]
   },
   {
@@ -113,7 +124,7 @@
    "metadata": {},
    "source": [
     "## Reading and importing data\n",
-    "Dataset will be read using `pandas`and inserted into TerminusDB by calling the `insert_data` fucntion. To avoid `Connection Timed Out` errors, dataset will be read in chunks. Every chunk will be processed individually through the `read_data` function, where some additional validations will be made before importing the data."
+    "Dataset will be read using `pandas` and inserted into TerminusDB by calling the `insert_content_data`, `insert_user_data` fucntions. To avoid `Connection Timed Out` errors, dataset will be read in chunks. Every chunk will be processed individually through the `read_data` function, where some additional validations will be made before importing the data."
    ]
   },
   {
@@ -123,14 +134,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def insert_data(client, url):\n",
+    "def insert_content_data(client, url):\n",
     "    df = pd.read_csv(url, chunksize=1000)\n",
     "    for chunk in tqdm(df, desc='Transfering data'):\n",
     "        csv = tempfile.NamedTemporaryFile()\n",
     "        chunk.to_csv(csv)\n",
     "        netflix_content = read_data(csv.name)\n",
-    "        client.insert_document(netflix_content,\n",
-    "                               commit_msg=\"Adding all Netflix content\")\n",
+    "        client.insert_document(netflix_content, commit_msg=\"Adding all Netflix content\")\n",
+    "\n",
+    "# We will generate and insert random 50 users using following function\n",
+    "def insert_user_data(contents):\n",
+    "    users = []\n",
+    "    for i in range(0,50):\n",
+    "        randomlist = random.sample(range(1, 50), i%10)\n",
+    "        watched_contents = set()\n",
+    "        for index in randomlist:\n",
+    "            watched_contents.add(schema.import_objects(contents[index]))\n",
+    "\n",
+    "        users.append(User(id=str(i), watched_contents = watched_contents))\n",
+    "\n",
+    "    client.insert_document(users, commit_msg=\"Adding users\")\n",
     "\n",
     "def read_data(csv):\n",
     "    records = []\n",
@@ -140,8 +163,8 @@
     "        type_of = row['type'].replace(\" \", \"_\")\n",
     "        rating = \"NR\" if pd.isna(row['rating']) else row['rating'].replace(\"-\", \"_\")\n",
     "\n",
-    "        records.append(Netflix(title=row['title'], type_of=Content_Type[type_of], director=str(row['director']), cast=str(row['cast']), country=str(row['country']), release_year=row['release_year'], rating=Rating[rating], duration=row['duration'], listed_in=row['listed_in'], description=row['description'], date_added=str(row['date_added'])))\n",
-    "    \n",
+    "        records.append(Content(title=row['title'], type_of=Content_Type[type_of], director=str(row['director']), cast=str(row['cast']), country=str(row['country']), release_year=row['release_year'], rating=Rating[rating], duration=row['duration'], listed_in=row['listed_in'], description=row['description'], date_added=str(row['date_added'])))\n",
+    "\n",
     "    return records"
    ]
   },
@@ -165,20 +188,23 @@
     "    db_id = \"Netflix\"\n",
     "    url = \"netflix.csv\"\n",
     "\n",
-    "    team = \"team\"\n",
-    "    client = WOQLClient(\"https://cloud.terminusdb.com/team/\")\n",
+    "    # TODO: change the team name \n",
+    "    team = \"TeamName\"\n",
+    "    client = WOQLClient(\"https://cloud.terminusdb.com/\"+team)\n",
     "    \n",
     "    try:\n",
     "        client.connect(team=team, use_token=True)\n",
     "        client.create_database(db_id, label = \"Netflix Graph\", description = \"Create a graph with Netflix data\")\n",
     "    except Exception:\n",
     "        client.connect(db=db_id, team=team, use_token=True)\n",
-    "    \n",
+    "\n",
     "    schema.commit(client, commit_msg = \"Adding Netflix Schema\")\n",
     "    \n",
-    "    insert_data(client, url)\n",
-    "    results = client.get_all_documents(graph_type=\"instance\", count=10)\n",
-    "    print(\"\\nRESULTS\\n\", list(results))"
+    "    insert_content_data(client, url)\n",
+    "\n",
+    "    contents = client.query_document({\"@type\"  : \"Content\"}, count=50)\n",
+    "\n",
+    "    insert_user_data(list(contents))"
    ]
   },
   {
@@ -219,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "matches = client.query_document({\"@type\"  : \"Netflix\",\n",
+    "matches = client.query_document({\"@type\"  : \"Content\",\n",
     "                                 \"type_of\": \"Movie\",\n",
     "                                 \"release_year\": \"2020\"})\n",
     "\n",
@@ -244,7 +270,7 @@
    "source": [
     "documents = client.get_all_documents(count=10)\n",
     "\n",
-    "matches = client.query_document({\"@type\"  : \"Netflix\",\n",
+    "matches = client.query_document({\"@type\"  : \"Content\",\n",
     "                                 \"type_of\": \"Movie\",\n",
     "                                 \"release_year\": \"2020\"}, count=10)"
    ]
@@ -322,7 +348,7 @@
    "metadata": {},
    "source": [
     "### List branches\n",
-    "If you wan to get a list of the branches, call the `get_all_branches` method. This method will return a list with details of the branches in your database."
+    "If you want to get a list of the branches, call the `get_all_branches` method. This method will return a list with details of the branches in your database."
    ]
   },
   {
@@ -338,6 +364,76 @@
     "\n",
     "# Output:\n",
     "# [{'@id': 'Branch/main', '@type': 'Branch', 'head': 'ValidCommit/ofxzh4i6jb9arf0nx5nicffhgcqxjco', 'name': 'main'}]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "809a6c8c",
+   "metadata": {},
+   "source": [
+    "## Time Travel\n",
+    "\n",
+    "You can reset a branch to a particular commit, squash a branch and rebase using following functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddf38cc3",
+   "metadata": {},
+   "source": [
+    "### Reset to commit\n",
+    "Reset the current branch HEAD to the specified commit path. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be647236",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.reset('hvatquoq9531k1u223v4azcdr1bfyde')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86d6a168",
+   "metadata": {},
+   "source": [
+    "### Squash\n",
+    "Squash the current branch HEAD into a commit."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5731302e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "commit_res = client.squash('This is a squash commit message!',\"username\")\n",
+    "\n",
+    "# reset to the squash commit \n",
+    "client.reset(commit_res['api:commit'],use_path=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7919d080",
+   "metadata": {},
+   "source": [
+    "### Rebase\n",
+    "Rebase the current branch onto the specified remote branch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a73fff4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.rebase(\"main\")"
    ]
   },
   {
